Regression: Realize instances losing materials #101871

Closed
opened 2022-10-17 09:21:10 +02:00 by Long Cat · 10 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-16 00:34, hash: 0c50f9c4aa
Worked: blender-3.3.1-windows-x64 is working as intended

Caused by f1c0249f34

Short description of error
Instances losing their materials after adding realize instances node

Exact steps for others to reproduce the error
Open the attached file
realize_instances.blend
Look at both planes geometry nodes. First plane (Plane) doesn't have realize instances. Second plane (Plane.001) has realize instances node.
Look at instances in the viewport. First plane's instances have different materials. Second plane's instances are all same.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-16 00:34, hash: `0c50f9c4aa` Worked: blender-3.3.1-windows-x64 is working as intended Caused by f1c0249f34 **Short description of error** Instances losing their materials after adding *realize instances* node **Exact steps for others to reproduce the error** Open the attached file [realize_instances.blend](https://archive.blender.org/developer/F13697988/realize_instances.blend) Look at both planes geometry nodes. First plane (Plane) doesn't have realize instances. Second plane (Plane.001) has realize instances node. Look at instances in the viewport. First plane's instances have different materials. Second plane's instances are all same.
Author

Added subscriber: @longcat

Added subscriber: @longcat

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Looks like a confirmed regression. In 3.3 everything worked correctly. But now I have to go, so I'll just ask the developers if this was in the plans.

Looks like a confirmed regression. In 3.3 everything worked correctly. But now I have to go, so I'll just ask the developers if this was in the plans.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Caused by f1c0249f34

CC @HooglyBoogly

Caused by f1c0249f34 CC @HooglyBoogly
Philipp Oeser changed title from Realize instances losing materials to Regression: Realize instances losing materials 2022-10-17 13:34:01 +02:00
Hans Goudey self-assigned this 2022-10-17 14:48:13 +02:00

This issue was referenced by 728451f01a

This issue was referenced by 728451f01ad5eec6abdc4f54364fe82490b151c5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101871
No description provided.